# proyecto1-1semestreDatos2

./: CMakeLists.txt  Doxyfile  README.md  Window.cpp  Window.h  docProyecto1.odt  main.cpp
Server/: CMakeLists.txt  main.cpp
Server/headers/: Grafo.h  memReserver.h
TareaCorta/doc/html/: _window_8h_source.html  annotated.html  class_window-members.html  class_window.html  class_window__inherit__graph.md5  classes.html  classguardar_pagina-members.html  classguardar_pagina.html  classleer_pagina-members.html  classm_server-members.html  classmem_reserver.html  classpagina-members.html  classpagina.html  dir_0f9694b8de2575528c6c0ae9f79dda65.html  dir_6a9487412907f0bd9cea1188c1c9234b.html  dir_7033be767f76884c48c7fb8956b9fc53.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_be6c53fb3a17475f088d611874039e1c.html  dir_d62ba6f7a4b5e703780b5d4939c2b8e7.html  files.html  functions.html  functions_func.html  guardar_pagina_8h_source.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  (+12 more)
doc/: QDW.txt
doc/html/: _grafo_8h_source.html  _window_8h_source.html  annotated.html  class_grafo-members.html  class_grafo.html  class_window-members.html  class_window.html  class_window__coll__graph.dot  classcomunicador-members.html  classcomunicador.html  classes.html  classformulador_mensajes-members.html  classformulador_mensajes.html  classlector_text_edit-members.html  classlector_text_edit.html  classm_server-members.html  classm_server.html  classm_server__coll__graph.dot  classm_server__coll__graph.md5  classmem_reserver-members.html  classmem_reserver.html  comunicador_8h_source.html  dir_0f9694b8de2575528c6c0ae9f79dda65.html  dir_1f64cdce0752549e3d6c7e77dbe9ba96.html  dir_223f833467d0519556e67235b386472b.html  dir_524d9379654cab8a0fec0db592c5f96f.html  dir_5f3123f49a94d6195c23347875a0ab45.html  dir_5fecca4a4ac4e2ba05fae41e981b3224.html  dir_66d0ed8a18120af00a669f0b274e1d92.html  dir_72645c09467becb234b61004b646b141.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_8d42905c80311ea8b71d0a9907d6bbbc.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d62ba6f7a4b5e703780b5d4939c2b8e7.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f9bff4404f64f46af093323cb3b609b6.html  dir_fd6e5a058da1336dd2fc41c034f42f4a.html  files.html  formulador_mensajes_8h_source.html  functions.html  (+25 more)
doc/latex/: annotated.tex  class_grafo.tex  class_window.tex  class_window__inherit__graph.dot  classcomunicador.tex  classformulador_mensajes.tex  classlector_text_edit.tex  classm_server.tex.tmp  classm_server__coll__graph.dot  classm_server__coll__graph.md5  classmem_reserver.tex  dir_1f64cdce0752549e3d6c7e77dbe9ba96.tex  dir_223f833467d0519556e67235b386472b.tex  dir_524d9379654cab8a0fec0db592c5f96f.tex  dir_5f3123f49a94d6195c23347875a0ab45.tex  dir_5fecca4a4ac4e2ba05fae41e981b3224.tex  dir_66d0ed8a18120af00a669f0b274e1d92.tex  dir_72645c09467becb234b61004b646b141.tex  dir_8d42905c80311ea8b71d0a9907d6bbbc.tex  dir_f9bff4404f64f46af093323cb3b609b6.tex  dir_fd6e5a058da1336dd2fc41c034f42f4a.tex  hierarchy.tex  refman.tex  structqt__meta__stringdata___window__t.tex
headers/: Grafo.h  comunicador.h  formuladorMensajes.h  guardarPagina.h  lectorTextEdit.h  leerPagina.h  mServer.h  memReserver.h  pagina.h
latex/: annotated.tex  class_window.tex  class_window__inherit__graph.md5  classguardar_pagina.tex  classleer_pagina.tex  classm_server.tex  classm_server.tex.tmp  classmem_reserver.tex  classpagina.tex  dir_0f9694b8de2575528c6c0ae9f79dda65.tex  dir_d62ba6f7a4b5e703780b5d4939c2b8e7.tex  hierarchy.tex  refman.tex  structqt__meta__stringdata___window__t.tex
logic/: Grafo.cpp  Servidor.cpp  comunicador.cpp  formuladorMensajes.cpp  guardarPagina.cpp  lectorTextEdit.cpp  leerPagina.cpp  mServer.cpp  memReserver.cpp  pagina.cpp
(+42 files in other folders)
